@@ -10,27 +10,21 @@ assert( L1B.FreqMode(1) == Q.FMODE );
 %
 % Set/create work folder
 %
-[R.WORK_FOLDER,rm_wfolder] = q2_create_workfolder( Q );
+[R.workfolder,rm_wfolder] = q2_create_workfolder( Q );
 %
 if rm_wfolder
-  cu = onCleanup( @()q2_delete_workfolder( R.WORK_FOLDER ) );
+  cu = onCleanup( @()q2_delete_workfolder( R.workfolder ) );
   clear rm_workfolder
 end
   
   
 %
-% Get and set initial atmospheric data
+% Get p_grid and a priori atmosphere
 %
 R.ATM = q2_get_atm( LOG, Q );
 %
-xmlStore( fullfile( R.WORK_FOLDER, 'p_grid.xml' ), R.ATM.P, ...
+xmlStore( fullfile( R.workfolder, 'p_grid.xml' ), R.ATM.P, ...
                                                          'Vector', 'binary' );
-xmlStore( fullfile( R.WORK_FOLDER, 't_field.xml' ), R.ATM.T, ...
-                                                        'Tensor3', 'binary' );
-xmlStore( fullfile( R.WORK_FOLDER, 'z_field.xml' ), R.ATM.Z, ...
-                                                        'Tensor3', 'binary' );
-xmlStore( fullfile( R.WORK_FOLDER, 'vmr_field.xml' ), R.ATM.VMR, ...
-                                                        'Tensor4', 'binary' );
 
 
 %
@@ -40,9 +34,9 @@ R  = q2_arts_sensor_parts( L1B, Q, R );
 R  = q2_arts_sensor( R );
 za = R.ZA_PENCIL;
 %
-xmlStore( fullfile( R.WORK_FOLDER, 'sensor_pos.xml' ), ...
+xmlStore( fullfile( R.workfolder, 'sensor_pos.xml' ), ...
                              repmat( R.Z_ODIN, size(za) ), 'Matrix', 'binary' );
-xmlStore( fullfile( R.WORK_FOLDER, 'sensor_los.xml' ), za, 'Matrix', 'binary' );
+xmlStore( fullfile( R.workfolder, 'sensor_los.xml' ), za, 'Matrix', 'binary' );
 
 
 %
@@ -102,7 +96,7 @@ function[xa,Q,R] = subfun4retqs( Q, R )
   %
   % Create cfiles to use, with and without Jacobian calculation
   %
-  R.jac_cfile = fullfile( R.WORK_FOLDER, 'jacobian.arts' );
+  R.jac_cfile = fullfile( R.workfolder, 'jacobian.arts' );
   %
   C.ABSORPTION         = 'LoadTable';
   C.ABS_LOOKUP_TABLE   = fullfile( Q.FOLDER_ABSLOOKUP, Q.ABSLOOKUP_OPTION, ...
@@ -115,25 +109,27 @@ function[xa,Q,R] = subfun4retqs( Q, R )
   C.R_EARTH            = R.R_EARTH;
   %
   C.JACOBIAN_DO        = false;
-  R.cfile_y            = q2_artscfile_full( C, R.WORK_FOLDER, 'cfile_y.arts' );
+  R.cfile_y            = q2_artscfile_full( C, R.workfolder, 'cfile_y.arts' );
   %
   C.JACOBIAN_DO        = true;
   C.JACOBIAN_FILE      = R.jac_cfile;
-  R.cfile_yj           = q2_artscfile_full( C, R.WORK_FOLDER, 'cfile_yj.arts' );
+  R.cfile_yj           = q2_artscfile_full( C, R.workfolder, 'cfile_yj.arts' );
   %
   clear C 
 
   
-  % Init main bookkeeping variables
+  % Init some of the bookkeeping variables
   R.ji    = [];    
   R.jq    = [];
+  R.i_rel = [];
   lx      = 0;
 
   % Init variable defining jac_file
   T{1} = 'Arts2{';
   T{2} = 'VectorCreate( empty_vector )';
   T{3} = 'VectorSet( empty_vector, [] )';
-    
+  T{4} = 'jacobianInit';
+  
   % Abs specices
   %
   R.i_asj = find( [ Q.ABS_SPECIES.RETRIEVE ] );
@@ -143,15 +139,22 @@ function[xa,Q,R] = subfun4retqs( Q, R )
     iq               = length(R.jq) + 1;
     np               = length( Q.ABS_SPECIES(i).GRID );
     R.jq{iq}.maintag = 'Absorption species';
-    R.jq{iq}.mode    = 'rel';
     R.ji{iq}{1}      = lx + 1;
     R.ji{iq}{2}      = lx + np;
     lx               = lx + np;
     %
+    if Q.ABS_SPECIES(i).LOG_ON
+      R.jq{iq}.mode    = 'logrel';
+    else
+      R.jq{iq}.mode    = 'rel';
+      R.i_rel          = [ R.i_rel R.ji{iq}{1}:R.ji{iq}{2} ];
+    end
+    %
     vector_name      = sprintf( 'retgrid%d', iq );
-    file_name        = fullfile( R.WORK_FOLDER, [vector_name,'.xml'] );
+    file_name        = fullfile( R.workfolder, [vector_name,'.xml'] );
     xmlStore( file_name, Q.ABS_SPECIES(iq).GRID, 'Vector' );
     %
+    T{end+1} = sprintf( 'VectorCreate( %s )', vector_name );
     T{end+1} = sprintf( 'ReadXML( %s, "%s" )', vector_name, file_name );
     T{end+1} = sprintf( 'jacobianAddAbsSpecies( species = %s,', ...
                                                arts_tgs_cnvrt(Q.ABS_SPECIES(i).TAG) );
@@ -165,9 +168,11 @@ function[xa,Q,R] = subfun4retqs( Q, R )
   end
 
   
-  % Create file setting up the jacobian
+  % Finalise and create file setting up the jacobian
   %
+  T{end+1} = 'jacobianClose';
   T{end+1} = '}';
+  %
   strs2file( R.jac_cfile, T );    
 
   % Create xa
