@@ -1,3 +1,12 @@
+2016-01-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* Mscripts_arts/q2_oemiter.m: Now started.
+
+2016-01-28  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* Mscripts_arts/q2_inv.m: Mainly work in this function. Some steps
+	towards inversions.
+
 2016-01-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* Settings/q_fields.rst:
